assets/scss/common.scss
/* ... */
header {
    text-align: left;
    line-height: 2;
    padding: 0;
    background: $color1_aux;
    color: $color1;
    position: relative;
    z-index: 10;

    [data-icon] {
        font-size: 3.3em;
        position: absolute;
        border: 0.05em solid $color1;
        box-sizing: border-box;

        &:before {
            content: ' ';
            display: block;
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background: rgba(191, 224, 109, 0.2);
            border-radius: 300em;
        }
    }
    h1 {
        font-size: 4rem;
        text-align: left;
        line-height: 1;
        margin: 0;
        padding: 0 0.5em 0.25em 0.2em;
        margin-left: -0.2em;

        background: -moz-linear-gradient(top,  rgba(62,70,73,1) 0%, rgba(62,70,73,1) 61%, rgba(62,70,73,0.7) 87%, rgba(62,70,73,0) 100%); /* FF3.6+ */
        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(62,70,73,1)), color-stop(61%,rgba(62,70,73,1)), color-stop(87%,rgba(62,70,73,0.7)), color-stop(100%,rgba(62,70,73,0))); /* Chrome,Safari4+ */
        background: -webkit-linear-gradient(top,  rgba(62,70,73,1) 0%,rgba(62,70,73,1) 61%,rgba(62,70,73,0.7) 87%,rgba(62,70,73,0) 100%); /* Chrome10+,Safari5.1+ */
        background: -o-linear-gradient(top,  rgba(62,70,73,1) 0%,rgba(62,70,73,1) 61%,rgba(62,70,73,0.7) 87%,rgba(62,70,73,0) 100%); /* Opera 11.10+ */
        background: -ms-linear-gradient(top,  rgba(62,70,73,1) 0%,rgba(62,70,73,1) 61%,rgba(62,70,73,0.7) 87%,rgba(62,70,73,0) 100%); /* IE10+ */
        background: linear-gradient(to bottom,  rgba(62,70,73,1) 0%,rgba(62,70,73,1) 61%,rgba(62,70,73,0.7) 87%,rgba(62,70,73,0) 100%); /* W3C */
        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3e4649', endColorstr='#003e4649',GradientType=0 ); /* IE6-9 */

        .fn {
            font-weight: 400;
            white-space: nowrap;
            @media (max-width: 440px) {
                white-space: normal;
            }

            span {
                font-weight: bold;
            }
        }
        .who {
            position: relative;
        }
        .nickname {
            font-weight: 400;
            display: block;
            font-size: 0.4em;
            text-align: center;
            text-transform: lowercase;
            position: absolute;
            left: 0;
            height: 1.5em;
            line-height: 1.5;
            bottom: -0.5em;
            color: $color3_light;
        }
        abbr[title] {
            border: none;
        }
    }
    .tagline {
        word-spacing: 1em;
        letter-spacing: 0.3em;
        color: $color1;
        text-transform: uppercase;
        line-height: 1;

        del {
            position: absolute;
            opacity: 1;
        }
        ins {
            opacity: 0;
            font-style: italic;
        }
        body:hover & {
            del {
                opacity: 0;
            }
            ins {
                opacity: 1;
            }
        }
        del,
        ins {
            text-decoration: none;
            font-size: 0.85em;
            letter-spacing: -1px;
            transition: opacity 2s;
        }
    }
    .box {
        padding-top: 15%;
        /*padding-top: 20vh;*/
    }
}


body:after {
    content:  ' ';
    display: block;
    width: 100%;
    height: 2em;
    position: fixed;
    top: 0;
    left: 0;
    background: $color3;
    border-bottom: 5px solid $color3_light;
    z-index: 3;

    .touch & {
    	display: none;
    }
}


#sticky-header {
    z-index: 1000;
    width: 100%;
    box-sizing: border-box;

    [data-icon],
    h1 {
        transition: all 0.3s;
        -moz-transition: font-size 0.3s;
    }
}


blockquote.quote {
    font-size: 1.3em;
    margin-left: 5%;
    max-width: 28.5em;
    line-height: 1.2;
    margin-bottom: 1em;

    main & {
        max-width: 20em;
        margin: 1em auto 2em;
    }

    p {
        margin-bottom: 0;
        max-width: 60%;
        line-height: 1;
    }
    .quote--sig {
        font-size: 0.5em;
        small {
            font-size: 1em;    
        }
    }

    &.t-big {
        font-size: 2.3em;
        padding: 0;
        line-height: 1.2;
        margin: 0 auto;
    }
    > * {
        &:nth-last-child(n+2) {
            &:before {
                content: "«";   
                margin-right: 0.1em;
            }
            &:after {
                content: "»";
                margin-left: 0.1em;
            }
        }
    }
}

main p {
    max-width: 40em;
}

.intro > * {
    padding: 2.5% 0 2.5%;
    position: relative;
    z-index: 3;
}
.intro {
    background: lighten($color1_light, 12%);
    color: $color3;
    overflow: hidden;

    h2,
    h3,
    h4 {
        color: $color3;
    }
}
.bridge {
    .pillow {
        padding: 5% 0;
        border-bottom: 2px solid $color1;
    }

    &:last-child {
        .pillow {
            border-bottom: 0;
        }
    }
}

.mentors,
.eras,
.footer-summary,
 {
    position: relative;
    z-index: 3;
}
/* ... */

